# diabetes-ai-app

./: LICENSE  README.md  linear_regression_and_decision_trees.ipynb  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
models/: decision_tree_model.joblib  logistic_model.joblib  schemas.py  train_data-2.csv  train_data.csv
services/: predictor.py
static/css/: output.css
templates/: index.html
